--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,19 @@
-
 header {
-  background-color: #0dc8e9; /* Color de fondo del encabezado */
-  color: #e00a0a; /* Color del texto en el encabezado */
+  background-color: #0d0d0e; /* Color de fondo del encabezado */
+  color: #000000; /* Color del texto en el encabezado */
   text-align: center;
   padding: 20px 0;
 }
 
 header h1 {
   font-size: 2rem;
-  color: #e20b0b; /* Color del título */
+  color: #f5f5f5; /* Color del título */
 }
 
 /* Estilos para el cuerpo de la página */
 main {
-  background-color: #8b8b8b; /* Color de fondo del cuerpo de la página */
-  color: #333; /* Color del texto en el cuerpo de la página */
+  background-color: #3c4729; /* Color de fondo del cuerpo de la página */
+  color: #131212; /* Color del texto en el cuerpo de la página */
   padding: 20px; /* Espacio alrededor del contenido principal */
 }
 
@@ -49,5 +48,25 @@ a.buy-button {
 
 
 a.buy-button:hover {
-  background-color: #c70e99; /* Cambia el color de fondo al hacer hover */
+  background-color: #c70e99; 
+}
+
+
+
+
+@keyframes blink {
+  0% {
+      opacity: 1;
+  }
+  50% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+}
+
+
+header img {
+  animation: blink 2s infinite; 
 }
